# local-llm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md  speak
config/: models.json
include/: async_pipeline.h  async_pipeline_factory.h  async_processors.h  async_processors_new.h  config_manager.h  llm.h  llm_llama.h  llm_rknn.h  pipeline_manager.h  server.h  stt.h  stt_sherpa.h  stt_whisper.h  tts.h  tts_paroli.h  tts_piper.h
scripts/: setup.sh  speak
src/: async_pipeline_factory.cpp  async_processors.cpp  common-sdl.cpp  llm_llama.cpp  llm_rknn.cpp  main.cpp  server.cpp  stt_sherpa.cpp  stt_whisper.cpp  tts_paroli.cpp  tts_piper.cpp
